.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:49:57 **** Incremental Build of configuration Debug for project F407_RNG_LEDBlink_NoHAL ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:21:9: error: expected identifier or '(' before '}' token
   21 |         }
      |         ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
22:50:28 **** Incremental Build of configuration Debug for project F407_RNG_LEDBlink_NoHAL ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "F407_RNG_LEDBlink_NoHAL.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/michael/Documents/MISC/F407_RNG_LEDBlink_NoHAL/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F407_RNG_LEDBlink_NoHAL.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: F407_RNG_LEDBlink_NoHAL.elf
 
arm-none-eabi-size  F407_RNG_LEDBlink_NoHAL.elf 
arm-none-eabi-objdump -h -S F407_RNG_LEDBlink_NoHAL.elf  > "F407_RNG_LEDBlink_NoHAL.list"
   text	   data	    bss	    dec	    hex	filename
    900	      0	   1568	   2468	    9a4	F407_RNG_LEDBlink_NoHAL.elf
Finished building: default.size.stdout
 
Finished building: F407_RNG_LEDBlink_NoHAL.list
 
22:51:03 **** Incremental Build of configuration Debug for project F407_RNG_LEDBlink_NoHAL ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
arm-none-eabi-gcc -o "F407_RNG_LEDBlink_NoHAL.elf" @"objects.list"   -mcpu=cortex-m4 -T"/home/michael/Documents/MISC/F407_RNG_LEDBlink_NoHAL/STM32F407VGTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="F407_RNG_LEDBlink_NoHAL.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: F407_RNG_LEDBlink_NoHAL.elf
 
arm-none-eabi-size  F407_RNG_LEDBlink_NoHAL.elf 
arm-none-eabi-objdump -h -S F407_RNG_LEDBlink_NoHAL.elf  > "F407_RNG_LEDBlink_NoHAL.list"
   text	   data	    bss	    dec	    hex	filename
    900	      0	   1568	   2468	    9a4	F407_RNG_LEDBlink_NoHAL.elf
Finished building: default.size.stdout
 
Finished building: F407_RNG_LEDBlink_NoHAL.list
 
